--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "description": "TypeScript ORM for AppEngine Datastore",
     "author": "dipacs",
     "license": "Apache-2.0",
+    "repository": {"type": "git", "url": "https://github.com/EagerLogic/Tsify"},
+    "keywords": ["typescript", "orm", "appengine", "nodejs"],
     "main": "lib/index.js",
     "typings": "lib/index.d.ts",
     "scripts": {
