--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
     "description": "TypeScript ORM for AppEngine Datastore",
     "author": "dipacs",
     "license": "Apache-2.0",
-    "repository": {"type": "git", "url": "https://github.com/EagerLogic/Tsify"},
-    "keywords": ["typescript", "orm", "appengine", "nodejs"],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/EagerLogic/Tsify"
+    },
+    "keywords": [
+        "typescript",
+        "orm",
+        "appengine",
+        "nodejs"
+    ],
     "main": "lib/index.js",
     "typings": "lib/index.d.ts",
     "scripts": {
         "prepare": "npm run build",
         "build": "tsc",
-        "test": "jest"
+        "test": "jest --runInBand"
     },
     "files": [
         "lib"
     ],
     "devDependencies": {
-        "@types/google-cloud__datastore": "^1.3.3",
         "@types/jest": "^23.3.13",
         "jest": "^23.6.0",
         "ts-jest": "^23.10.5",
