--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "module": "commonjs",
         "importHelpers": true,
         "allowJs": false,
-        "outDir": "lib",
+        "outDir": "./lib",
         "lib": [
             "es6"
         ],
